--- a/working/templatepack.csproj
+++ b/working/templatepack.csproj
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <PackageType>template</PackageType>
     <PackageVersion>1.0.15</PackageVersion>
-    <PackageId>Skyline.DataMiner.VisualStudioTemplates</PackageId>
+    <PackageId>Dazn.DataMiner.VisualStudioTemplates</PackageId>
     <Title>DataMiner DotNet Templates</Title>
-    <Authors>SkylineCommunications</Authors>
+    <Authors>DAZN</Authors>
     <Description>This package contains DataMiner dotnet templates for use in Visual Studio and the dotnet CLI.</Description>
     <PackageTags>dotnet-new;templates;DataMiner</PackageTags>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
