--- a/working/templatepack.csproj
+++ b/working/templatepack.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <PackageType>template</PackageType>
+    <PackageType>Template</PackageType>
     <PackageVersion>1.0.15</PackageVersion>
     <PackageId>DAZN.DataMiner.VisualStudioTemplates</PackageId>
     <Title>DataMiner DotNet Templates</Title>
