--- a/.github/workflows/CreateNuGet.yml
+++ b/.github/workflows/CreateNuGet.yml
@@ -28,3 +28,24 @@ jobs:
         with:
           name: NugetPackages
           path: "${{ steps.findcreatednuget.outputs.nugetPackageName }}"
+
+  push:
+    if: github.ref_type == 'tag'
+    name: push
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download NuGet
+        id: downloadNuGet
+        uses: actions/download-artifact@v4
+        with:
+          name: NugetPackages
+          
+      - name: Find Nuget
+        id: findcreatednuget
+        run: echo nugetPackageName=$(find . -type f -name '*.nupkg') >> $GITHUB_OUTPUT
+        shell: bash
+        
+      - name: Push to NuGet.org
+        run: dotnet nuget push "${{ steps.findcreatednuget.outputs.nugetPackageName }}" --api-key ${{ secrets.NUGETAPIKEY }} --source source "github"
+        shell: bash
