--- a/.github/workflows/CreateNuGet.yml
+++ b/.github/workflows/CreateNuGet.yml
@@ -30,7 +30,6 @@ jobs:
           path: "${{ steps.findcreatednuget.outputs.nugetPackageName }}"
 
   push:
-    if: github.ref_type == 'tag'
     name: push
     runs-on: ubuntu-latest
     needs: build
@@ -46,6 +45,6 @@ jobs:
         run: echo nugetPackageName=$(find . -type f -name '*.nupkg') >> $GITHUB_OUTPUT
         shell: bash
         
-      - name: Push to NuGet.org
+      - name: Push to Github
         run: dotnet nuget push "${{ steps.findcreatednuget.outputs.nugetPackageName }}" --api-key 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 --source source "github"
         shell: bash
